; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/lib/traceevent/extr_event-parse.c___read_expected.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/lib/traceevent/extr_event-parse.c___read_expected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @__read_expected to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__read_expected(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = call i32 @read_token(i8** %8)
  store i32 %13, i32* %7, align 4
  br label %16

14:                                               ; preds = %3
  %15 = call i32 @read_token_item(i8** %8)
  store i32 %15, i32* %7, align 4
  br label %16

16:                                               ; preds = %14, %12
  %17 = load i32, i32* %7, align 4
  %18 = load i8*, i8** %8, align 8
  %19 = load i32, i32* %4, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @test_type_token(i32 %17, i8* %18, i32 %19, i8* %20)
  store i32 %21, i32* %9, align 4
  %22 = load i8*, i8** %8, align 8
  %23 = call i32 @free_token(i8* %22)
  %24 = load i32, i32* %9, align 4
  ret i32 %24
}

declare dso_local i32 @read_token(i8**) #1

declare dso_local i32 @read_token_item(i8**) #1

declare dso_local i32 @test_type_token(i32, i8*, i32, i8*) #1

declare dso_local i32 @free_token(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
